Update link from HTTP to HTTPS

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             整合基因组学、转录组学、影像组学等多维度数据，提供精准的疾病亚型分类、治疗反应预测与预后分析工具
                         </p>
                         <div class="flex flex-wrap gap-4">
-                            <a href="http://rs.aieshanghai.com/"
+                            <a href="https://rs.aieshanghai.com/"
                                 class="bg-primary hover:bg-primary/90 text-white font-medium px-6 py-3 rounded-lg transition-colors">
                                 立即使用 <i class="fa fa-arrow-right ml-2"></i>
                             </a>
