--- a/manual.html
+++ b/manual.html
@@ -54,6 +54,33 @@
                 </nav>
             </div>
         </div>
+
+        <!-- 移动端菜单按钮 -->
+        <button id="menuBtn" class="md:hidden text-white text-xl">
+            <i class="fa fa-bars"></i>
+        </button>
+        </div>
+        </div>
+
+        <!-- 移动端导航菜单 -->
+        <div id="mobileMenu" class="md:hidden hidden bg-primary/95 border-t border-blue-400">
+            <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
+                <a href="index.html"
+                    class="text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">首页</a>
+                <a href="manual.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">使用手册</a>
+                <a href="tools.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">分析工具</a>
+                <a href="help.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">帮助中心</a>
+                <a href="about.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">关于我们</a>
+                <a href="contact.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">联系我们</a>
+                <a href="announcement.html"
+                    class="text-gray-200 hover:text-white hover:bg-blue-600 py-2 px-3 rounded-md font-medium transition-colors">公告栏</a>
+            </div>
+        </div>
     </header>
 
     <main class="pt-24 md:pt-32 pb-20">
