--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     <a href="about.html"
                         class="text-gray-200 hover:text-white font-medium text-xl transition-colors">关于我们</a>
                     <a href="contact.html"
-                        class="text-white font-medium text-xl transition-colors border-b-2 border-white">联系我们</a>
+                        class="text-gray-200 font-medium text-xl transition-colors border-b-2 border-white">联系我们</a>
                     <a href="announcement.html"
                         class="text-gray-200 hover:text-white font-medium text-xl transition-colors">公告栏</a>
                 </nav>
