--- a/announcement.html
+++ b/announcement.html
@@ -105,12 +105,117 @@
         <!-- 公告栏 -->
         <section id="announcement" class="section-padding bg-light pt-24 md:pt-32">
             <div class="container mx-auto px-4 md:px-6">
-                <div class="max-w-4xl mx-auto text-center">
+                <div class="max-w-5xl mx-auto text-center">
                     <i class="fa fa-bullhorn text-6xl text-primary mb-4"></i>
-                    <p class="text-3xl font-semibold text-gray-700 mb-8">最新动态和重要通知</p>
+                    <h2 class="text-3xl font-bold text-gray-800 mb-12">最新动态和重要通知</h2>
 
-                    <div class="bg-white rounded-xl shadow-lg p-8 md:p-12 text-center">
-                        <h3 class="text-2xl text-gray-600 mb-4">暂无最新公告</h3>
+                    <div class="grid gap-8 text-left">
+
+                        <div
+                            class="bg-white rounded-xl shadow-md p-6 md:p-8 card-hover flex flex-col md:flex-row gap-6">
+                            <div
+                                class="flex-shrink-0 flex items-center justify-center w-16 h-16 bg-blue-100 rounded-lg text-primary text-3xl">
+                                <i class="fa fa-users"></i>
+                            </div>
+                            <div class="flex-grow">
+                                <div class="flex items-center justify-between mb-2">
+                                    <span
+                                        class="bg-green-100 text-green-600 text-xs font-bold px-3 py-1 rounded-full">课题进展</span>
+                                    <span class="text-gray-400 text-sm italic">2025-12-25</span>
+                                </div>
+                                <h3
+                                    class="text-xl font-bold text-gray-800 mb-3 hover:text-primary transition-colors cursor-pointer">
+                                    智慧科研 迭代焕新：多模态数据分析平台 2.0 正式发布
+                                </h3>
+                                <p class="text-gray-600 leading-relaxed mb-4">
+                                    在国家重点研发计划项目步入成果产出的关键时期，课题四研究组正式发布“多模态数据分析平台
+                                    2.0”。这标志着平台从单一的计算环境进化为集科研展示、数据协作于一体的综合性数字化门户。
+                                </p>
+                                <a href="news/platform2.html"
+                                    class="text-primary font-medium hover:underline flex items-center">
+                                    阅读详情 <i class="fa fa-angle-right ml-2"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div
+                            class="bg-white rounded-xl shadow-md p-6 md:p-8 card-hover flex flex-col md:flex-row gap-6">
+                            <div
+                                class="flex-shrink-0 flex items-center justify-center w-16 h-16 bg-blue-100 rounded-lg text-primary text-3xl">
+                                <i class="fa fa-newspaper-o"></i>
+                            </div>
+                            <div class="flex-grow">
+                                <div class="flex items-center justify-between mb-2">
+                                    <span
+                                        class="bg-primary/10 text-primary text-xs font-bold px-3 py-1 rounded-full">项目进展</span>
+                                    <span class="text-gray-400 text-sm italic">2023-12-8</span>
+                                </div>
+                                <h3
+                                    class="text-xl font-bold text-gray-800 mb-3 hover:text-primary transition-colors cursor-pointer">
+                                    质量引领 目标对齐：国家重点研发计划“儿童重要血液性疾病与肿瘤”项目实施协调会在沪召开
+                                </h3>
+                                <p class="text-gray-600 leading-relaxed mb-4">
+                                    2023年12月8日，国家重点研发计划“生殖健康及妇女儿童健康保障”重点专项——“儿童重要血液性疾病与肿瘤的病因与防治技术研究”项目实施协调会在上海召开。
+                                </p>
+                                <a href="news/coordination.html"
+                                    class="text-primary font-medium hover:underline flex items-center">
+                                    阅读详情 <i class="fa fa-angle-right ml-2"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div
+                            class="bg-white rounded-xl shadow-md p-6 md:p-8 card-hover flex flex-col md:flex-row gap-6">
+                            <div
+                                class="flex-shrink-0 flex items-center justify-center w-16 h-16 bg-blue-100 rounded-lg text-primary text-3xl">
+                                <i class="fa fa-users"></i>
+                            </div>
+                            <div class="flex-grow">
+                                <div class="flex items-center justify-between mb-2">
+                                    <span
+                                        class="bg-green-100 text-green-600 text-xs font-bold px-3 py-1 rounded-full">课题进展</span>
+                                    <span class="text-gray-400 text-sm italic">2023-4-6</span>
+                                </div>
+                                <h3
+                                    class="text-xl font-bold text-gray-800 mb-3 hover:text-primary transition-colors cursor-pointer">
+                                    科技赋能研究：国家重点项目“多模态数据分析平台 1.0”正式发布上线
+                                </h3>
+                                <p class="text-gray-600 leading-relaxed mb-4">
+                                    今日，课题四组正式宣布发布“多模态数据分析平台 1.0”。该平台的上线标志着课题组在处理临床大数据、实现多维度信息整合方面迈入了规范化与自动化的新阶段。
+                                </p>
+                                <a href="news/platform1.html"
+                                    class="text-primary font-medium hover:underline flex items-center">
+                                    阅读详情 <i class="fa fa-angle-right ml-2"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div
+                            class="bg-white rounded-xl shadow-md p-6 md:p-8 card-hover flex flex-col md:flex-row gap-6">
+                            <div
+                                class="flex-shrink-0 flex items-center justify-center w-16 h-16 bg-blue-100 rounded-lg text-primary text-3xl">
+                                <i class="fa fa-newspaper-o"></i>
+                            </div>
+                            <div class="flex-grow">
+                                <div class="flex items-center justify-between mb-2">
+                                    <span
+                                        class="bg-primary/10 text-primary text-xs font-bold px-3 py-1 rounded-full">项目进展</span>
+                                    <span class="text-gray-400 text-sm italic">2023-3-3</span>
+                                </div>
+                                <h3
+                                    class="text-xl font-bold text-gray-800 mb-3 hover:text-primary transition-colors cursor-pointer">
+                                    攻克儿科重大疾病：国家重点研发计划“儿童重要血液性疾病与肿瘤”项目在京启动
+                                </h3>
+                                <p class="text-gray-600 leading-relaxed mb-4">
+                                    2023年3月3日，国家重点研发计划“生殖健康及妇女儿童健康保障”重点专项——“儿童重要血液性疾病与肿瘤的病因与防治技术研究”项目启动会在北京正式召开。
+                                </p>
+                                <a href="news/launch.html"
+                                    class="text-primary font-medium hover:underline flex items-center">
+                                    阅读详情 <i class="fa fa-angle-right ml-2"></i>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
