--- a/announcement.html
+++ b/announcement.html
@@ -149,8 +149,8 @@
                             </div>
                         </div>
 
-                        <div class="relative flex items-center justify-between md:justify-start group">
-                            <div class="hidden md:block w-1/2 pr-12 text-right">
+                        <div class="relative flex items-center justify-between md:flex-row-reverse group">
+                            <div class="hidden md:block w-1/2 pr-12 text-left">
                                 <time
                                     class="text-2xl font-black text-gray-200 group-hover:text-primary transition-colors">2023.04</time>
                             </div>
@@ -164,7 +164,7 @@
                                     <span class="md:hidden block text-gray-400 font-bold mb-2">2023-04-06</span>
                                     <h3
                                         class="text-xl font-bold text-gray-800 mb-3 group-hover:text-primary transition-colors">
-                                        科技赋能研究：多模态数据分析平台 1.0 正式发布上线</h3>
+                                        科技赋能研究：多模态数据分析平台 1.0 全新发布正式上线</h3>
                                     <p class="text-gray-600 text-sm leading-relaxed mb-4">
                                         平台迈入了规范化与自动化的新阶段，实现了临床大数据的初步整合。</p>
                                     <a href="news/platform1.html"
@@ -175,8 +175,8 @@
                             </div>
                         </div>
 
-                        <div class="relative flex items-center justify-between md:flex-row-reverse group">
-                            <div class="hidden md:block w-1/2 pl-12 text-left">
+                        <div class="relative flex items-center justify-between md:justify-start group">
+                            <div class="hidden md:block w-1/2 pl-12 text-right">
                                 <time
                                     class="text-2xl font-black text-gray-200 group-hover:text-primary transition-colors">2023.03</time>
                             </div>
