--- a/announcement.html
+++ b/announcement.html
@@ -143,7 +143,8 @@
                                     </div>
 
                                     <div class="flex flex-wrap items-center gap-4 mb-4 relative z-10">
-                                        <time class="text-xl font-black text-primary tracking-tight">2025.12.25</time>
+                                        <time
+                                            class="text-xl font-black text-gray-400 tracking-tight group-hover:text-primary transition-colors">2025.12.25</time>
                                         <span
                                             class="bg-primary text-white text-[10px] font-black px-3 py-1 rounded-full shadow-sm tracking-widest">LATEST</span>
                                     </div>
