--- a/announcement.html
+++ b/announcement.html
@@ -192,7 +192,7 @@
                                     </h3>
 
                                     <p class="text-gray-600 text-sm md:text-base leading-loose mb-8 relative z-10">
-                                        平台迈入了规范化与自动化的新阶段，实现了临床大数据的初步整合与标准化存储。
+                                        平台完成了核心底层架构的搭建，打通了多源异构数据的接入链路，正式开启数据驱动研究新范式。
                                     </p>
 
                                     <div class="relative z-10">
