--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     <header id="navbar" class="fixed w-full top-0 z-50 bg-primary shadow-lg">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16 md:h-20">
-                <div class="flex items-center space-x-2 md:hidden">
-                    <i class="fa fa-flask text-white text-xl"></i>
-                    <span class="text-white font-bold text-sm">儿童重要肿瘤与血液性疾病多模态数据分析平台</span>
+
+                <div class="flex items-center space-x-2 md:hidden max-w-[80%]">
+                    <i class="fa fa-flask text-white text-lg shrink-0"></i>
+                    <span class="text-white font-bold text-sm truncate">肿瘤血液多模态平台</span>
                 </div>
 
                 <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
@@ -81,14 +82,14 @@
 
         <div id="mobileMenu"
             class="hidden md:hidden bg-primary border-t border-white/10 shadow-xl overflow-hidden transition-all duration-300">
-            <div class="px-4 py-4 flex flex-col space-y-4">
+            <div class="px-4 py-4 flex flex-col space-y-2">
                 <a href="index.html" class="text-white font-bold bg-white/10 py-3 px-4 rounded-lg">首页</a>
-                <a href="manual.html" class="text-white/90 py-2 px-4">使用手册</a>
-                <a href="tools.html" class="text-white/90 py-2 px-4">分析工具</a>
-                <a href="help.html" class="text-white/90 py-2 px-4">帮助中心</a>
-                <a href="about.html" class="text-white/90 py-2 px-4">关于我们</a>
-                <a href="contact.html" class="text-white/90 py-2 px-4">联系我们</a>
-                <a href="announcement.html" class="text-white/90 py-2 px-4">公告栏</a>
+                <a href="manual.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">使用手册</a>
+                <a href="tools.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">分析工具</a>
+                <a href="help.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">帮助中心</a>
+                <a href="about.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">关于我们</a>
+                <a href="contact.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">联系我们</a>
+                <a href="announcement.html" class="text-white/90 py-3 px-4 active:bg-white/5 rounded-lg">公告栏</a>
             </div>
         </div>
     </header>
